syntax = "proto3";
package user_image;

option java_package         = "com.example.soundnest_android.user_image";
option java_outer_classname = "UserImageMessagesProto";
option java_multiple_files  = true;

message UploadImageRequest {
    int32 user_id = 1;
    bytes image_data = 2;
    string extension = 3;
  }
  
  message UploadImageResponse {
    bool success = 1;
    string message = 2;
  }
  
  message DownloadImageRequest {
    int32 user_id = 1;
  }
  
  message DownloadImageResponse {
    bytes image_data = 1;
    string extension = 2;
  }
  